--- a/font.css
+++ b/font.css
@@ -1,8 +1,9 @@
 /*!
  *
- * CSS Font style
+ * Bitcoin CSS Font style
+ * @author: Paulo Miranda
  *
- * @author: Yusuke Sugomori
+ * Based in CSS Sans Font by @author: Yusuke Sugomori
  * @license: http://yusugomori.com/license/gpl-3.0
  *
  */
